Grammar typos corrected in Parallel_code_Insee, Deletion of code from the table of contents in the YAML of the Code project because it did not work.

--- a/Code_project.qmd
+++ b/Code_project.qmd
@@ -1,9 +1,7 @@
 ---
 title: "Role of sociodemographic factors in the French cinema landscape over the last 50 years "
 author: "Kylian SANTOS and Cédric BAZILE"
-output:
-  html_document:
-    toc: TRUE
+format: html
 editor: visual
 ---
 
