--- a/1_Code_project.qmd
+++ b/1_Code_project.qmd
@@ -159,10 +159,10 @@ cnc_data_clean <- left_join(cnc_data_clean, multiplexes_with_0, by = c("departem
 In the original "Multiplexes" sheet, NA value were assigned when there were 0 multiplexes. We replaced this NA value with 0. and ensured that this replacement only occurs for the year when data had been collected
 
 ```{r}
-rme <- cnc_data_clean |> select(RME)
-rmeAE <- cnc_data_clean |> select(RMEAE)
-tmof <- cnc_data_clean |> select(`taux d'occupation des fauteuils`)
-tmofAE <- cnc_data_clean |> select(tmofAE)
+rme <- cnc_data_clean |> select(departement_code, year, RME)
+rmeAE <- cnc_data_clean |> select(departement_code, year, RMEAE)
+tmof <- cnc_data_clean |> select(departement_code, year, `taux d'occupation des fauteuils`)
+tmofAE <- cnc_data_clean |> select(departement_code, year, tmofAE)
 
 cnc_data_clean <- cnc_data_clean |> select(-`indice de fréquentation`, 
                                            -`indice de fréquentationAE`, 
@@ -275,7 +275,7 @@ The databases at our disposal will help us to explore this question by looking i
 
 1.  **Evolution of the Market :** The information provided will help us understand how the movie theater market has evolved in terms of volumes over the last fifty years. One of the key aspects in exploring this question will be to examine the market evolution in terms of venues (établissements). However, the number of movie theaters will not be our sole indicator. Indeed, the number of sessions (séances), seats (fauteuils), and screens (écrans) will be complementary variables that can help us to put under the spotlight potential trends that may not be apparent when solely examining the number of venues.  Employing panel data has a dual utility here. It not only enables us to capture the overall temporal trends but also to observe potential cross-sectional differences. Indeed, one of our key objectives is to comprehend whether divergences in trajectories and characteristics exist among the various French departments.
 
-2.  **Structural Shifts with Multiplexes:** A zoom on the multiplexes permits evaluating a recent structural transformation in the movie theater industry. The first one appears in France during the end of the 1990s and can be arguably seen as a shift in the cinema market. Blanchard ([2014](https://www.cairn.info/revue-migrations-societe-2014-1-page-153.htm)) argues that these facilities \"have contributed to the resurgence of attendance, notably by making the cinema more accessible to suburban residents.\" Furthermore, despite their relative novelty, they represent an important share of the market industry. Investigating the ascendancy and impact of multiplexes sheds light on societal preferences, emphasizing convenience and a simultaneous offering of diverse films.
+2.  **Structural Shifts with Multiplexes:** A zoom on the multiplexes permits evaluating a recent structural transformation in the movie theater industry. The first one appears in France during the end of the 1990s and can be arguably seen as a shift in the cinema market. Blanchard ([2014](https://www.cairn.info/revue-migrations-societe-2014-1-page-153.htm)) argues that these facilities "have contributed to the resurgence of attendance, notably by making the cinema more accessible to suburban residents." Furthermore, despite their relative novelty, they represent an important share of the market industry.
 
 3.  **Economic Health of the Industry:** Variables such as the number of tickets bought (entrées) and total revenue (recettes) will also be complementary and potentially important information. They will notably be key tools for gauging the economic vitality of the industry and determining if the economic dynamics align with the stock of venues, seats, and their past investments.
 
@@ -287,8 +287,8 @@ In essence, our research delves into the recent history of movie theaters in Fra
 
 <br>
 
-# Bibliography 
+# Bibliography
 
 *APA format*
 
-**Blanchard, J. (2014).** "Multiplexes, public de banlieue et création cinématographique française : caractère marchand de l\'ethnicité sur grand écran". *Migrations Société*, 151, 153-164. <https://doi.org/10.3917/migra.151.0153>
+**Blanchard, J. (2014).** "Multiplexes, public de banlieue et création cinématographique française : caractère marchand de l'ethnicité sur grand écran". *Migrations Société*, 151, 153-164. <https://doi.org/10.3917/migra.151.0153>
