Biblography : addition of sources that nourish our analysis

--- a/1_Code_project.qmd
+++ b/1_Code_project.qmd
@@ -289,6 +289,24 @@ In essence, our research delves into the recent history of movie theaters in Fra
 
 # Bibliography
 
-*APA format*
-
 **Blanchard, J. (2014).** "Multiplexes, public de banlieue et création cinématographique française : caractère marchand de l'ethnicité sur grand écran". *Migrations Société*, 151, 153-164. <https://doi.org/10.3917/migra.151.0153>
+
+**CNC, 2008.** Evolution du public des salles de cinéma 1993-2007, les études du CNC
+
+**CNC,2013.** L’évolution du public  des salles de cinéma 1993-2012, les études du CNC, septembre 2013
+
+**CNC, 2016.** Les publics du cinéma 1993-2015, les études du CNC, septembre 2016
+
+**CNC, 2020.** Observatoire de la diffusion et de la fréquentation cinématographiques - Indicateurs permanents  Année 2018
+
+**CRETON Laurent, 2011.** Économie du cinéma et multiplication des supports de diffusion. Le cas français entre exemplarité et incertitude. *Le cinéma: permanences et métamorphoses*, 180, Raison présente, 2011.
+
+**DURAND Jacques, 1960.** Le film et son marché. *Esprit, Nouvelle série*, No. 285 (6), pp. 1024-1033
+
+URL: <https://www.jstor.org/stable/24255988>
+
+**DUVAL Julien, 2011.** « L'offre et les goûts cinématographiques en France ». *Sociologie*, 2011/1 (Vol. 2), p. 1-18. DOI : 10.3917/socio.021.0001.
+
+URL : <https://www.cairn.info/revue-sociologie-2011-1-page-1.htm>
+
+**MUHLBERGER David 2013.** Cinema attendance during crises is there a relationship between cinema attendance and the state of the economy in France in the period 1992-2012?
