Légère faute d'ortographe modifiée

--- a/1_Code_project.qmd
+++ b/1_Code_project.qmd
@@ -289,7 +289,7 @@ In essence, our research delves into the recent history of movie theaters in Fra
 
 # Bibliography
 
-**Blanchard, J. (2014).** "Multiplexes, public de banlieue et création cinématographique française : caractère marchand de l'ethnicité sur grand écran". *Migrations Société*, 151, 153-164. <https://doi.org/10.3917/migra.151.0153>
+**Blanchard, Jean-Philippe (2014).** "Multiplexes, public de banlieue et création cinématographique française : caractère marchand de l'ethnicité sur grand écran". *Migrations Société*, 151, 153-164. <https://doi.org/10.3917/migra.151.0153>
 
 **CNC, 2008.** Evolution du public des salles de cinéma 1993-2007, les études du CNC
 
